--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  a distribution server for scaling browser allocation,
  and the infrastructure for implementations of the
  <a href=//www.w3.org/TR/webdriver/>W3C WebDriver specification</a>
- that lets you write interchangable code for all major web browsers.
+ that lets you write interchangeable code for all major web browsers.
 
 <p>The project is made possible by volunteer contributors
  who have put in thousands of hours of their own time,
@@ -28,7 +28,7 @@
  to teach and nurture the community.
 
 <p>At the core of Selenium is <em><a href=wd.html>WebDriver</a></em>,
- an interface to write instruction sets that can be run interchangably in many browsers.
+ an interface to write instruction sets that can be run interchangeably in many browsers.
  Here is one of the simplest instructions you can make:
 
 <!-- TODO(ato): We should find a better example.  Perhaps Todo list? -->
