update links to quick tour

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@ search_box.submit()</code></pre>
 <div id=gettingstarted><ul>
  <li><a href=quick.html#quick_tour>Quick Tour</a>
   <ul>
-   <li><a href=quick.html#first>First</a>
-   <li><a href=quick.html#second>Second</a>
+   <li><a href=quick.html#webdriver>WebDriver</a>
+   <li><a href=quick.html#selenium_remote_control>Selenium Remote
+   Control</a>
+   <li><a href=quick.html#selenium_ide>Selenium IDE</a>
+   <li><a href=quick.html#selenium_grid>Selenium Grid</a>
   </ul></li>
 </ul>
 </div>
