add reference to selenium-chrome driver

--- a/install.html
+++ b/install.html
@@ -28,6 +28,16 @@ tests only on Firefox browser -
 </textarea>
 
 that's all and you are ready to driver your tests in firefox browser.
+In the similar manner, if you want to run tests only in chrome browser then you can use
+following dependency -
+
+<textarea rows="6" cols="100" style="border:none; margin-top:10px; margin-bottom:10px;">
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-chrome-driver</artifactId>
+    <version>2.53.1</version>
+</dependency>
+</textarea>
 
 <h2>Using standalone jar</h2>
 More often than not you would need to run test on more than one browser and you would also like
