fixed more spelling errors

--- a/install.html
+++ b/install.html
@@ -9,7 +9,7 @@
 <h1>Selenium Installation</h1>
 
 <p>Selenium set up is quite different than other commercial tools. You don't install a tool using
-selenium binaries but set up your test automation project to use selenium binary in the langauge
+selenium binaries but set up your test automation project to use selenium binary in the language
 of your choice. The selenium binary you would need depends on browsers you want to run
 your tests upon.
 
