--- a/quick.html
+++ b/quick.html
@@ -17,7 +17,7 @@ are going to be using WebDriver APIs. WebDriver uses browser
 automation APIs provided by browser vendors to control browser and
 run tests. This is as if real user is operating the browser. Since
 WebDriver does not require its API to be compiled with application
-code hence it is not intrusive in nature. Hence you are testing he
+code hence it is not intrusive in nature. Hence you are testing the
 same application which you push live.
 
 <h2>Selenium Remote Control</h2>
