--- a/best.html
+++ b/best.html
@@ -144,12 +144,12 @@ about it.
 <h2>Generating Application State</h2>
 
 <p>Selenium should not be used to prepare a test case.  All repetitive
-actions, and prepration for a test case should be done through other
+actions, and preparation for a test case should be done through other
 methods.  An example, most Web UIs have authentication (e.g., a login
 form).  Eliminating logging in via web browser before every test will
 improve both the speed and stability of the test. A method should be
-created to gain access to the AUT (e.g. using an API to login and set
-cookie inbrowser object).  Also, creating methods to pre-load data for
+created to gain access to the AUT (e.g. using an API to login and set a
+cookie).  Also, creating methods to pre-load data for
 testing should not be done using Selenium.  As mentioned previously,
 existing APIs should be leveraged to create data for the AUT.
 
