Add reference to highlight.js project in attr.html

--- a/attr.html
+++ b/attr.html
@@ -65,6 +65,15 @@
 </ul>
 </div>
 
+<p>Third-Party Software used by Selenium documentation project:
+<table>
+ <tr><th>Software</th> <th>Version</th> <th>License</th></tr>
+ <tr>
+   <td><a href="https://github.com/isagalaev/highlight.js">Highlight.js</a></td>
+   <td>9.7.0</td>
+   <td><a href="https://github.com/isagalaev/highlight.js/blob/master/LICENSE">BSD License</a></td></tr>
+</table>
+
 
 <h2>HTML Version and Source Code</h2>
 
