Fix typo in grid.html
Fix #89

--- a/grid.html
+++ b/grid.html
@@ -75,7 +75,7 @@
 
  <dt>Limited power</dt>
  <dd>Certain third party libraries have limitations
-  that prevent them from being used in conjuction with Grid.</dd>
+  that prevent them from being used in conjunction with Grid.</dd>
 </dl>
 
 
