--- a/wd.html
+++ b/wd.html
@@ -67,7 +67,74 @@
  for getting you started with the different browsers.
 
 
-<h3>Chromium/Chrome</h3>
+<h3>Quick Reference</h3>
+
+<table>
+ <tr>
+  <th>Browser
+  <th>Supported OS
+  <th>Maintained by
+  <th>Download
+  <th>Issue Tracker
+ </tr>
+
+ <tr>
+  <th>Chromium/Chrome
+  <td>Windows<br>
+   OS X<br>
+   Linux
+  <td>Google
+  <td><a href="https://chromedriver.storage.googleapis.com/index.html">Downloads</a>
+  <td><a href="https://bugs.chromium.org/p/chromedriver/issues/list">Issues</a>
+ </tr>
+
+ <tr>
+  <th>Firefox
+  <td>Windows<br>
+   OS X<br>
+   Linux
+  <td>Mozilla
+  <td><a href=https://github.com/mozilla/geckodriver/releases>Downloads</a>
+  <td><a href=https://github.com/mozilla/geckodriver/issues>Issues</a>
+ </tr>
+
+ <tr>
+  <th>Edge
+  <td>Windows 10
+  <td>Microsoft
+  <td><a href=https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/>Downloads</a>
+  <td><a href="https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/?page=1&amp;q=webdriver">Issues</a>
+ </tr>
+
+ <tr>
+  <th>Internet Explorer
+  <td>Windows
+  <td>Selenium Project
+  <td><a href=http://selenium-release.storage.googleapis.com/index.html>Downloads</a>
+  <td><a href=https://github.com/SeleniumHQ/selenium/labels/D-IE>Issues</a>
+ </tr>
+
+ <tr>
+  <th>Safari
+  <td>OS X El Capitan &amp; newer
+  <td>Apple
+  <td>Built in
+  <td><a href="https://bugreport.apple.com/logon">Issues</a>
+ </tr>
+
+ <tr>
+  <th>Opera
+  <td>Windows<br>
+   OS X<br>
+   Linux
+  <td>Opera
+  <td><a href=https://github.com/operasoftware/operachromiumdriver/releases>Downloads</a>
+  <td><a href=https://github.com/operasoftware/operachromiumdriver/issues>Issues</a>
+ </tr>
+</table>
+
+
+<h4>Chromium/Chrome</h4>
 
 <p>To drive Chrome or Chromium, you have to download
  <a href=//sites.google.com/a/chromium.org/chromedriver/downloads>chromedriver</a>
