Added a quick reference section with quick links to issue trackers and downloads

--- a/wd.html
+++ b/wd.html
@@ -67,7 +67,55 @@
  for getting you started with the different browsers.
 
 
-<h3>Chromium/Chrome</h3>
+<h3>Quick Reference</h3>
+
+<table>
+ <tr>
+  <th>Browser</th><th>Supported OS</th><th>Maintained by</th><th>Download</th><th>Issue Tracker</th>
+ </tr>
+ <tr>
+  <th>Chromium/Chrome</th>
+  <td>Windows<br>OS X<br>Linux</td>
+  <td>Google</td><td><a href="https://chromedriver.storage.googleapis.com/index.html">Downloads</a></td>
+  <td><a href="https://bugs.chromium.org/p/chromedriver/issues/list">Issues</a></td>
+ </tr>
+ <tr>
+  <th>Firefox</th>
+  <td>Windows<br>OS X<br>Linux<br>Arm</td>
+  <td>Mozilla</td><td><a href="https://github.com/mozilla/geckodriver/releases">Downloads</a></td>
+  <td><a href="https://github.com/mozilla/geckodriver/issues">Issues</a></td>
+ </tr>
+ <tr>
+  <th>Edge</th>
+  <td>Windows 10</td>
+  <td>Microsoft</td>
+  <td><a href="https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/">Downloads</a></td>
+  <td><a href="https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/?page=1&q=webdriver">Issues</a></td>
+ </tr>
+ <tr>
+  <th>Internet Explorer</th>
+  <td>Windows</td>
+  <td>Selenium Project</td>
+  <td><a href="http://selenium-release.storage.googleapis.com/index.html">Downloads</a></td>
+  <td><a href="https://github.com/SeleniumHQ/selenium/labels/D-IE">Issues</a></td>
+ </tr>
+ <tr>
+  <th>Safari</th>
+  <td>OS X El Capitan & newer</td>
+  <td>Apple</td>
+  <td>Built in</td>
+  <td><a href="https://bugreport.apple.com/logon">Issues</a></td>
+ </tr>
+ <tr>
+  <th>Opera</th>
+  <td>Windows<br>OS X<br>Linux</td>
+  <td>Opera</td>
+  <td><a href="https://github.com/operasoftware/operachromiumdriver/releases">Downloads</a></td>
+  <td><a href="https://github.com/operasoftware/operachromiumdriver/issues">Issues</a></td>
+ </tr>
+</table>
+
+<h4>Chromium/Chrome</h4>
 
 <p>To drive Chrome or Chromium, you have to download
  <a href=//sites.google.com/a/chromium.org/chromedriver/downloads>chromedriver</a>
