--- a/wd.html
+++ b/wd.html
@@ -101,7 +101,7 @@
  </tr>
  <tr>
   <th>Safari</th>
-  <td>OS X El Capitan & newer</td>
+  <td>OS X El Capitan &amp; newer</td>
   <td>Apple</td>
   <td>Built in</td>
   <td><a href="https://bugreport.apple.com/logon">Issues</a></td>
